src/style.css
/* ... */
.circular-lozenge {
	font-weight: bold;
	border-radius: 99999px;
	padding: 9px 11px;
	min-width: 18px;
	min-height: 22px;
	color: var(--accent-color);
	background-color: alpha(var(--accent-bg-color),0.15);
}

.circular-lozenge.large {
	font-size: 24px;
	padding: 15px 18px;
	min-width: 24px;
	min-height: 30px;
}

button.context-tile:hover .lozenge {
  background-color: alpha(var(--accent-bg-color),0.25);
}

button.context-tile:active .lozenge {
  background-color: alpha(var(--accent-bg-color),0.35);
}

.small-pill {
    padding: 2px 12px;
    border-radius: 99999px;
}

.medium-pill {
	border-radius: 99999px;
}

.colored {
    background-color: var(--accent-bg-color);
    color: var(--accent-color);
}

.card.colored {
    background-color: alpha(var(--accent-bg-color),0.15);
    color: var(--accent-color);
}

.small-pill.dimmed {
    background-color: alpha(@theme_fg_color, 0.15);
}

.small-pill.error {
    background-color: alpha(@error_bg_color, 0.15);
}

.installed-pill {
	background-color: alpha(@success_bg_color, 0.15);
	color: @success_color;
	font-weight: 500;
	font-size: 0.9em;
 	padding: 2px 7px 2px 4.5px;
}

.sp-section .installed-pill {
  background-color: alpha(@window_fg_color, 0.10);
  color: alpha(@window_fg_color, 0.75);
}

.download-size-pill{
  padding: 2px 8px;
}

.flathub-page-section {
    border-radius: 10px;
}

.transaction-list-view row {
    margin: 0;
    padding: 0;
}

window.narrow .app-title {
  font-size: 16pt;
}

.developer-badge > button {
	padding: 0;
  	background-color: transparent;
}

.developer-badge:focus > button {
	border-radius: 5px;
}

window.narrow .app-developer {
	font-size: small;
}

.context-tile {
  box-shadow: none;
	padding: 4px;
}

button.context-tile {
  background-color: transparent;
}

.context-tile-text {
	font-size: 10pt;
	font-weight: 500;
}

.wide-image {
	margin-top: -28px;
	margin-bottom: -28px;
}

.screenshot-carousel.frame {
	border-width: 1px 0;
}

.screenshot-carousel button{
	margin: 12px;
}

.carousel-box {
  background-color: var(--view-bg-color);
}

toggle-group.huge,
toggle-group.huge * {
  border-radius: 9999px;
}

.huge > toggle {
  padding: 3px 12px;
}

.otg {
  background: linear-gradient(to right, #2f3d9f, #682889);
}

.wlg {
  background: linear-gradient(to right, #821756, #136673);
}

.sp-section .card:not(:hover):not(:active) {
  background: transparent;
}

.sp-section .card {
  box-shadow: none;
}

@media (prefers-color-scheme: light) {
  .otg {
    background: linear-gradient(to right, #c6eaf8, #c4f3c9);
  }

  .wlg {
    background: linear-gradient(to right, #fdcde0, #b0e5f0);
  }

  .sp-section .card:hover {
    background: rgba(255, 255, 255, 0.50);
  }

  .sp-section .card:active {
    background: rgba(255, 255, 255, 0.75);
  }
}

.sp-section-image {
	margin-top: -95px;
	margin-bottom: -95px;
}

.sp-section-title {
	font-size: 3.5em;
}

.decorated-screenshot {
  margin: 0;
  padding: 0;
  background-color: transparent;
}

.indicator-box button {
  margin: 0 4px 4px 0;
}

.pip-button.osd-box {
  padding: 0;
}

.pip-button > button {
  margin: 5px;
}

window,
headerbar,
.global-search {
  transition: background-color 0.2s ease;
}

.header-osd windowcontrols button image {
  background-color: rgba(0, 0, 0, 0.65);
  color: white;
  background-image: none;
}

.osd-box {
  border-radius: 12px;
  background-color: rgba(0, 0, 0, 0.65);
  padding: 6px;
  color: white;
}

.view-dark {
  background-color: black;
  color: white;
}

.header-osd box.horizontal:not(.end) {
	background-color: rgba(0, 0, 0, 0.65);
	border-radius: 10px;
}

.accent-button {
  border-radius: 9999px;
  padding: 3px;
  background: var(--flag-gradient, var(--accent-bg-color));
  min-width: 32px;
  min-height: 32px;
  outline: none;
  background-clip: content-box;
  background-origin: content-box;
  box-shadow: none;
  transition: transform 0.3s ease;
}

.accent-button.horizontal {
  transform: rotate(-90deg);
}

.accent-button-box > flowboxchild {
  padding: 0;
  background-color: transparent;
}

.accent-button:checked {
  box-shadow: 0 0 0 3px var(--accent-bg-color);
}
.accent-button:focus:focus-visible {
  box-shadow: 0 0 0 3px color-mix(in srgb, var(--accent-color) 30%, transparent);
}
.accent-button:checked:focus:focus-visible {
  box-shadow: 0 0 0 3px var(--accent-bg-color),
              0 0 0 6px color-mix(in srgb, var(--accent-color) 30%, transparent);
}


/* Category buttons styling modified from GNOME Software*/
.category-tile {
  font-weight: 700;
  font-size: 13pt;
  color: white;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  padding-left: 32px;
  padding-right: 32px;
}

@media (prefers-contrast: more) {
  .category-tile {
    box-shadow: none;
  }
}

window.narrow .category-tile {
  font-size: 14pt;
  padding-left: 24px;
  padding-right: 24px;
}

/* All background gradients are at 135deg for consistency */

.category-tile.category-recently-updated {
  background: linear-gradient(135deg, #f9ef69, #26a269);
  color: #0c3020;
  text-shadow: 0 1px rgba(255, 255, 255, 0.35);
}
.category-tile.category-recently-updated:hover {
  background: linear-gradient(135deg, shade(#f9ef69, 1.1), shade(#26a269, 1.1));
}
.category-tile.category-recently-updated:active {
  background: linear-gradient(135deg, shade(#f9ef69, 0.95), shade(#26a269, 0.95));
}

.category-tile.category-recently-added {
  background: linear-gradient(135deg, #99a3eb, #495ade);
}
.category-tile.category-recently-added:hover {
  background: linear-gradient(135deg, shade(#99a3eb, 1.1), shade(#495ade, 1.1));
}
.category-tile.category-recently-added:active {
  background: linear-gradient(135deg, shade(#99a3eb, .95), shade(#495ade, .95));
}

.category-tile.category-trending {
  background: linear-gradient(135deg, #99c1f1, #3584e4);
}
.category-tile.category-trending:hover {
  background: linear-gradient(135deg, shade(#99c1f1, 1.1), shade(#3584e4, 1.1));
}
.category-tile.category-trending:active {
  background: linear-gradient(135deg, shade(#99c1f1, .95), shade(#3584e4, .95));
}
/* ... */

